# liFFT

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  FFT_test.hpp  IntensityCalculator_Test.hpp  README.md  Volume.hpp  VolumeAdapter.hpp  codecov.yml  formFactor.py  generateData.hpp  helpModule.py  main.cpp  policyExample.hpp  policyTest.hpp  rect.tif  testCustomTypes.cpp  testCustomTypes.cu  testDefines.hpp  testFile.cpp  testFile.cu  testUtils.cpp  testUtils.cu  testUtils.hpp  tiff2pdf.cpp  writeData.py
cmake/: FindFFTW.cmake
fftTiffImg/: main.cpp  main.cu
include/: IntensityLibrary.hpp  c++14_types.hpp  uvector.hpp
include/foobar/: AllocatorWrapper.hpp  AutoDetect.hpp  Composite.hpp  FFT.hpp  FFT_DataWrapper.hpp  FFT_Definition.hpp  FFT_Impl.hpp  FFT_InplaceOutput.hpp  FFT_Kind.hpp  FFT_Memory.hpp  FFT_Properties.hpp  c++14_types.hpp  foobar.hpp  generateData.hpp  ignore_unused.hpp  util.hpp  void_t.hpp
include/foobar/accessors/: ArrayAccessor.hpp  ConvertAccessor.hpp  DataContainerAccessor.hpp  ImageAccessor.hpp  StreamAccessor.hpp  TransformAccessor.hpp  TransposeAccessor.hpp  VolumeAccessor.hpp  ZipAccessor.hpp
include/foobar/mem/: AoSValues.hpp  ComplexAoSValues.hpp  ComplexSoAValues.hpp  DataContainer.hpp  FileContainer.hpp  PlainPtrWrapper.hpp  RealValues.hpp
include/foobar/policies/: ArrayAccessor.hpp  CalcIntensity.hpp  CalcIntensityFunctor.hpp  CalcIntensityImpl.hpp  ConvertAccessor.hpp  Copy.hpp  CopyArray2Array.hpp  CopyArray2Stream.hpp  DataContainerAccessor.hpp  FFT.hpp  GetExtents.hpp  GetExtentsRawPtr.hpp  GetIntensity.hpp  GetNumElements.hpp  GetRawPtr.hpp  GetStrides.hpp  GetValue.hpp  ImageAccessor.hpp  IntensityCalculator.hpp  Loop.hpp  LoopNDims.hpp  Ptr2Ptr.hpp  ReadData.hpp  SafePtrCast.hpp  StreamAccessor.hpp  TransformAccessor.hpp  TransposeAccessor.hpp  VolumeAccessor.hpp  WriteData.hpp  all.hpp  flattenIdx.hpp
include/foobar/testLib/: IntensityLibrary.hpp
include/foobar/traits/: AccessorTraits.hpp  DefaultAccessor.hpp  GetMemSize.hpp  IdentityAccessor.hpp  IntegralType.hpp  IsAoS.hpp  IsBinaryCompatible.hpp  IsComplex.hpp  IsDeviceMemory.hpp  IsInplace.hpp  IsStrided.hpp  MemoryType.hpp  NumDims.hpp  RemoveModifiers.hpp  all.hpp  void_t.hpp
include/foobar/types/: AddDimsWrapper.hpp  AoSValues.hpp  Complex.hpp  ComplexAoSValues.hpp  ComplexSoAValues.hpp  DataContainer.hpp  DimOffsetWrapper.hpp  FileContainer.hpp  InplaceType.hpp  InputData.hpp  Range.hpp  Real.hpp  RealValues.hpp  SliceView.hpp  StreamWrapper.hpp  SymmetricWrapper.hpp  TypePair.hpp  Vec.hpp  View.hpp  all.hpp
include/haLT/: AutoDetect.hpp  Composite.hpp  FFT.hpp  FFT_DataWrapper.hpp  FFT_Definition.hpp  FFT_InplaceOutput.hpp  FFT_Kind.hpp  FFT_Memory.hpp  FFT_Properties.hpp  foobar.hpp  generateData.hpp  haLT.hpp  ignore_unused.hpp  util.hpp  void_t.hpp
include/haLT/accessors/: ArrayAccessor.hpp  ConvertAccessor.hpp  DataContainerAccessor.hpp  ImageAccessor.hpp  StreamAccessor.hpp  TransformAccessor.hpp  TransposeAccessor.hpp  VolumeAccessor.hpp  ZipAccessor.hpp
include/haLT/mem/: AoSValues.hpp  ComplexAoSValues.hpp  ComplexSoAValues.hpp  DataContainer.hpp  FileContainer.hpp  PlainPtrWrapper.hpp  RealValues.hpp
include/haLT/policies/: CalcIntensity.hpp  CalcIntensityFunctor.hpp  Copy.hpp  GetExtents.hpp  GetExtentsRawPtr.hpp  GetNumElements.hpp  GetStrides.hpp  IntensityCalculator.hpp  Loop.hpp  SafePtrCast.hpp  flattenIdx.hpp
include/haLT/traits/: AccessorTraits.hpp  GetMemSize.hpp  IdentityAccessor.hpp  IntegralType.hpp  IsAoS.hpp  IsBinaryCompatible.hpp  IsComplex.hpp  IsDeviceMemory.hpp  IsInplace.hpp  IsStrided.hpp  NumDims.hpp  RemoveModifiers.hpp
include/haLT/types/: AddDimsWrapper.hpp  Complex.hpp  Range.hpp  Real.hpp  SliceView.hpp  SymmetricWrapper.hpp  TypePair.hpp  Vec.hpp  View.hpp
include/liFFT/: Composite.hpp  FFT.hpp  FFT_DataWrapper.hpp  FFT_Definition.hpp  FFT_InplaceOutput.hpp  FFT_Kind.hpp  FFT_Memory.hpp  FFT_Properties.hpp  generateData.hpp  util.hpp  void_t.hpp
include/liFFT/accessors/: ArrayAccessor.hpp  ConvertAccessor.hpp  DataContainerAccessor.hpp  ImageAccessor.hpp  StreamAccessor.hpp  TransposeAccessor.hpp  VolumeAccessor.hpp  ZipAccessor.hpp
include/liFFT/mem/: AoSValues.hpp  ComplexAoSValues.hpp  ComplexSoAValues.hpp  DataContainer.hpp  FileContainer.hpp  PlainPtrWrapper.hpp  RealValues.hpp
include/liFFT/policies/: CalcIntensity.hpp  CalcIntensityFunctor.hpp  Copy.hpp  GetExtents.hpp  GetExtentsRawPtr.hpp  GetNumElements.hpp  GetStrides.hpp  IntensityCalculator.hpp  Loop.hpp  SafePtrCast.hpp  flattenIdx.hpp
include/liFFT/traits/: AccessorTraits.hpp  IdentityAccessor.hpp  IntegralType.hpp  IsAoS.hpp  IsBinaryCompatible.hpp  IsComplex.hpp  IsDeviceMemory.hpp  IsStrided.hpp  NumDims.hpp  RemoveModifiers.hpp
include/liFFT/types/: AddDimsWrapper.hpp  Complex.hpp  Range.hpp  Real.hpp  SliceView.hpp  SymmetricWrapper.hpp  TypePair.hpp  Vec.hpp  View.hpp
include/libLiFFT/: AutoDetect.hpp  FFT.hpp  FFT_DataWrapper.hpp  FFT_Definition.hpp  FFT_InplaceOutput.hpp  FFT_Memory.hpp  FFT_Properties.hpp  c++14_types.hpp  generateData.hpp  ignore_unused.hpp  libLiFFT.hpp  util.hpp
include/libTiff/: AllocatorWrapper.hpp  FormatTraits.hpp  ImageFormat.hpp  converters.hpp  exceptions.hpp  image.hpp  image.tpp  libTiff.hpp  libTiff.tpp  traitsAndPolicies.hpp
include/tiffWriter/: AllocatorWrapper.hpp  FormatTraits.hpp  ImageFormat.hpp  converters.hpp  exceptions.hpp  image.hpp  image.tpp  tiffWriter.hpp  traitsAndPolicies.hpp  uvector.hpp
reportVolumes/: main.cpp  main.cu
test/: CMakeLists.txt  IntensityCalculator_Test.hpp  Volume.hpp  VolumeAdapter.hpp  generateData.hpp  main.cpp  main.cu  minIncludes.cpp  policyExample.hpp  policyTest.hpp  testCustomTypes.cpp  testCustomTypes.cu  testCustomTypes.hpp  testDefines.hpp  testFile.cpp  testFile.cu  testFile.hpp  testInplace.cpp  testInplace.cu  testInplace.hpp  testPlainPtr.cpp  testPlainPtr.cu  testPlainPtr.hpp  testUtils.cpp  testUtils.cu  testUtils.hpp  testWrappers.cpp  testWrappers.cu  testZip.cpp  testZip.cu  testZip.hpp
tiff2Pdf/: tiff2pdf.cpp
(+121 files in other folders)
